--- a/ethereum-contracts/package.json
+++ b/ethereum-contracts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@superfluid-finance/ethereum-contracts",
-  "version": "0.1.0-preview-20200928",
+  "version": "0.1.0-preview-20200928-fix1",
   "description": " Ethereum contracts implementation for the Superfluid Protocol",
   "license": "MIT",
   "main": "js-sdk/index.js",
