--- a/ethereum-contracts/package.json
+++ b/ethereum-contracts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@superfluid-finance/ethereum-contracts",
-  "version": "0.1.0-preview-20200928-fix1",
+  "version": "0.1.0-preview-20200928-fix2",
   "description": " Ethereum contracts implementation for the Superfluid Protocol",
   "license": "MIT",
   "main": "js-sdk/index.js",
@@ -36,8 +36,8 @@
   "scripts": {
     "build": "run-s build:*",
     "build:contracts": "rm -f build/contracts/*;truffle compile",
-    "build:abi": "scripts/build-abi-js.sh > build/abi.js",
-    "test": "run-s lint:* build:* test:*",
+    "build:abi": "scripts/build-abi-js.sh",
+    "test": "run-s lint:js lint:sol build:* test:*",
     "test:contracts": "truffle test test/contracts.test.js && cat build/eth-gas-report.txt | tee build/contracts-eth-gas-report.txt",
     "test:sdk": "truffle test test/sdk.test.js",
     "test:deployment": "truffle test test/deployment.test.js",
