--- a/sample-integrations/superfluid-console-demo/package.json
+++ b/sample-integrations/superfluid-console-demo/package.json
@@ -13,6 +13,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Superfluid",
+  "license": "MIT"
 }
