--- a/ethereum-contracts/package.json
+++ b/ethereum-contracts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@superfluid-finance/ethereum-contracts",
-  "version": "0.1.0-preview-20200928-fix2",
+  "version": "0.1.0-preview-20200928-fix3",
   "description": " Ethereum contracts implementation for the Superfluid Protocol",
   "license": "MIT",
   "main": "js-sdk/index.js",
@@ -8,7 +8,8 @@
     "/contracts/**/*.sol",
     "/build/abi.js",
     "/build/contracts/*.json",
-    "js-sdk/*.js"
+    "scripts/**/*.js",
+    "js-sdk/**/*.js"
   ],
   "dependencies": {
     "@openzeppelin/contracts": "3.2.1-solc-0.7"
