--- a/sample-integrations/superapp-demo/ui/package.json
+++ b/sample-integrations/superapp-demo/ui/package.json
@@ -19,6 +19,7 @@
     "@decentral.ee/web3-helpers": "^0.3.2",
     "@ethersproject/contracts": "^5.0.1",
     "@ethersproject/providers": "^5.0.4",
+    "@openzeppelin/test-helpers": "^0.5.6",
     "@superfluid-finance/ethereum-contracts": "0.1.0-preview-20200928-fix3",
     "@testing-library/dom": "^6.12.2",
     "@testing-library/jest-dom": "^4.2.4",
