--- a/sample-integrations/superapp-demo/package.json
+++ b/sample-integrations/superapp-demo/package.json
@@ -5,7 +5,7 @@
   "main": "scripts/demo.js",
   "scripts": {
     "build": "truffle build",
-    "pretest": "mkdir -p build/contracts;cp node_modules/@superfluid-finance/ethereum-contracts/build/contracts/* build/contracts/",
+    "pretest": "mkdir -p build/contracts;cp ../../ethereum-contracts/build/contracts/* build/contracts/",
     "test": "truffle test"
   },
   "author": "Superfluid",
@@ -14,7 +14,7 @@
     "@decentral.ee/web3-helpers": "^0.3.2",
     "@openzeppelin/contracts": "^3.2.1-solc-0.7",
     "@openzeppelin/test-helpers": "^0.5.6",
-    "@superfluid-finance/ethereum-contracts": "0.1.0-preview-20200928-fix3",
+    "@superfluid-finance/ethereum-contracts": "0.1.0-preview-20200928-fix6",
     "@truffle/contract": "^4.2.23",
     "@truffle/hdwallet-provider": "^1.1.0",
     "dotenv": "^8.2.0",
