--- a/sample-integrations/superapp-demo/ui/package.json
+++ b/sample-integrations/superapp-demo/ui/package.json
@@ -27,6 +27,7 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/react": "^16.9.19",
     "@walletconnect/web3-provider": "^1.2.2",
+    "animated-number-react": "^0.1.1",
     "apollo-boost": "^0.4.7",
     "apollo-client": "^2.6.8",
     "apollo-utilities": "^1.3.3",
