--- a/ethereum-contracts/package.json
+++ b/ethereum-contracts/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@superfluid-finance/ethereum-contracts",
-  "version": "0.1.2-preview-20201014",
+  "version": "0.1.2-preview-20201014-fix2",
   "description": " Ethereum contracts implementation for the Superfluid Protocol",
   "repository": "github:superfluid-finance/ethereum-contracts",
   "license": "MIT",
   "main": "js-sdk/index.js",
   "files": [
     "/contracts/**/*.sol",
-    "!/contracts/mocks/*.sol",
+    "/contracts/**/*.json",
+    "!/contracts/mocks/*",
     "/build/abi.js",
     "/build/contracts/*.json",
     "!/build/contracts/*Tester.json",
@@ -28,6 +29,8 @@
     "dotenv": "8.2.0",
     "eslint": "7.10.0",
     "eth-gas-reporter": "0.2.17",
+    "ethereumjs-tx": "^2.1.2",
+    "ethereumjs-util": "^7.0.6",
     "ganache-time-traveler": "1.0.15",
     "husky": "4.3.0",
     "npm-run-all": "4.1.5",
