--- a/sample-integrations/flowlottery/package.json
+++ b/sample-integrations/flowlottery/package.json
@@ -5,20 +5,20 @@
   "main": "scripts/demo.js",
   "scripts": {
     "build": "truffle compile --all",
-    "pretest": "mkdir -p build/contracts;cp ../../ethereum-contracts/build/contracts/* build/contracts/",
+    "pretest": "rm -rf build;mkdir -p build/contracts;cp node_modules/@superfluid-finance/ethereum-contracts/build/contracts/* build/contracts/",
     "test": "truffle test",
-    "deploy": "npm run build && RELEASE_VERSION=preview-20200928 npx truffle --network goerli exec scripts/deploy.js"
+    "deploy": "npm run build && RELEASE_VERSION=0.1.2-preview-20201014 npx truffle --network goerli exec scripts/deploy.js"
   },
   "author": "Superfluid",
   "license": "MIT",
   "devDependencies": {
     "@decentral.ee/web3-helpers": "^0.3.2",
     "@openzeppelin/contracts": "^3.2.1-solc-0.7",
-    "@openzeppelin/test-helpers": "^0.5.6",
-    "@superfluid-finance/ethereum-contracts": "0.1.0-preview-20200928-fix6",
-    "@truffle/contract": "^4.2.23",
+    "@openzeppelin/test-helpers": "^0.5.7",
+    "@superfluid-finance/ethereum-contracts": "0.1.2-preview-20201014-fix2",
+    "@truffle/contract": "^4.2.25",
     "@truffle/hdwallet-provider": "^1.1.0",
     "dotenv": "^8.2.0",
-    "truffle": "^5.1.46"
+    "truffle": "^5.1.48"
   }
 }
