--- a/ethereum-contracts/package.json
+++ b/ethereum-contracts/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "sf/ethereum-contracts",
-    "version": "0.1.2-preview-20201014-nodeps",
+    "name": "@superfluid-finance/ethereum-contracts",
+    "version": "0.1.2-preview-20201014-fix5",
     "description": " Ethereum contracts implementation for the Superfluid Protocol",
     "repository": "github:superfluid-finance/ethereum-contracts",
     "license": "MIT",
@@ -16,6 +16,11 @@
         "scripts/**/*.js",
         "js-sdk/**/*.js"
     ],
+    "dependencies": {
+        "@openzeppelin/contracts": "3.2.1-solc-0.7",
+        "ethereumjs-tx": "2.1.2",
+        "ethereumjs-util": "7.0.6"
+    },
     "peerDependencies": {
         "@truffle/contract": "^4.2.23"
     },
